# biblioteca

./: .gitignore  .swp  README.md
library_app/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
library_app/src/: app.py
library_app/src/controllers/: authControllers.py  copiaController.py  materialController.py  prestamoController.py  reservaController.py  studentController.py  userControllers.py
library_app/src/model/: db.py  models.py  usuario.py
library_app/src/scripts/: seed_constraints_indices.py  seed_estado.py  seed_material.py  seed_roles.py
library_app/src/view/: catalogView.py  copiaView.py  librarianView.py  loginView.py  materialView.py  myLoansView.py  myReservationsView.py  prestamoView.py  registerView.py  reservaView.py  studentView.py  userView.py
